# INTELLIGENT-FILE-DEDUPLICATOR

./: Cargo.toml  README.md  report-output.json  sample2.txt
assets/: README.md  data1.json  error_report.txt  notes.md  report2.csv  something_else.txt  tiny.txt
assets copy/: copy_of_file1.txt  file2.txt  report1.txt
docs/: all.html  crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
docs/file_compare/: fn.compare_files.html  index.html  sidebar-items.js
docs/filter/: fn.parse_filter_options.html  index.html  sidebar-items.js  struct.FilterOptions.html
docs/hashing/: fn.hash_file.html  index.html  sidebar-items.js
docs/report/: fn.write_json_report.html  index.html  sidebar-items.js
docs/safe_delete/: fn.delete_duplicates.html  index.html  sidebar-items.js
docs/scanner/: fn.scan_directory_for_duplicates.html  index.html  sidebar-items.js
src/: file_compare.rs  filter.rs  handler.rs  hashing.rs  lib.rs  main.rs  report.rs  safe_delete.rs  scanner.rs  ui.rs
tests/: compare_tests.rs  delete_tests.rs  filter_tests.rs  hashing_tests.rs  report_tests.rs  scanner_tests.rs
